Implement auth logic + swagger
